# sandbox.cppcms

./: .gitignore  CMakeLists.txt  README.md  config.json  sqitch.conf  sqitch.plan
deploy/: all.sql  pets.sql
include/: applications.hpp  rests.hpp
include/dao/: database.hpp
include/model/: Pet.hpp
include/rest/: pets.hpp  stores.hpp  users.hpp
revert/: all.sql
scripts/: app-arm-linux-gnueabihf.sh  app.sh  build-arm-linux-gnueabihf.sh  build.cmd  build.sh  start.sh
scripts/setup/: databases.sh  prerequisites-arm-linux-gnueabihf.sh  prerequisites-armhf.sh  prerequisites.armhf.sh  prerequisites.cmd  prerequisites.sh  toolchain.cmd  toolchain.sh
src/: applications.cpp  main.cpp  rests.cpp
src/dao/: database.cpp
src/rest/: pets.cpp  rests.cpp  stores.cpp  users.cpp
toolchains/: arm-linux-gnueabihf.cmake
verify/: all.sql  users.sql
